@startuml

skinparam linetype polyline

title Class Diagram - CCCF

class ShoppingCenter {
    - openingHour
    - closingHour
    - time
    - arrivalProbability
    - isOpen
}

class AttentionCenter{
    - emptyCashRegisters
}

class CashRegister {
    - id
    - currentCashier
    - timePerItemPack
    - isOcuppied
    - isOpen
}

class Customer {
    - id
    - numberOfItemPacks
}

class Queue {
    - size
}

class Cashier {
    - id
    - name
    - workShift
    - workBreak
    - isServing
}

class DataLog{

}


ShoppingCenter -- Queue
ShoppingCenter -- Customer
ShoppingCenter -- Cashier
ShoppingCenter -- CashRegister

Queue -- AttentionCenter
Queue --  Customer

AttentionCenter -left- Customer
AttentionCenter -- CashRegister

CashRegister -right- Cashier

CashRegister -- Customer

ShoppingCenter .. DataLog
Queue .. DataLog
CashRegister .. DataLog

@enduml